fixed margins and padding on mobile

--- a/scss/_casestudy.scss
+++ b/scss/_casestudy.scss
@@ -1,7 +1,5 @@
 // splash screen css
 #splash {
-
-    overflow: hidden;
     width: 100%;
     height: 100vh;
 
@@ -19,6 +17,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    overflow: hidden;
 }
 
 // not nested because these classes are also used in the footer
@@ -36,7 +35,7 @@
     display: flex;
     flex-direction: column;
     max-width: 1000px;
-    padding: 0 10vw;
+    padding: 0 8vw;
     margin: 0 auto;
 
     .section {
@@ -57,7 +56,6 @@
             align-items: flex-start;
             justify-content: space-between;
             padding: 0 2vw;
-            margin: 2vh 0 15vh 0;
 
             .section-text {
                 white-space: pre-wrap;
@@ -79,12 +77,18 @@
     }
 }
 
+// bigger screens
 @media (min-width: 1000px) {
+
     .section-heading {
         width: 40%;
         min-width: 200px;
         font-size: $fontMedium;
         margin: 0;
+    }
+
+    .section-content {
+        margin: 2vh 0 15vh 0;
     }
 
     .section-text {
@@ -102,14 +106,24 @@
 }
 
 @media (max-width: 1000px) {
+
     .section-text {
         width: 100%;
+        font-size: $fontMini;
     }
 
     .section-heading {
         width: 100%;
-        margin-top: 4vh;
+        margin: 2vh 0 3vh 0;
         font-size: $statTitle;
+    }
+
+    .section-content {
+        margin-bottom: 5vh;
+    }
+
+    .section-title {
+        margin-bottom: 0;
     }
 
     .logo-subtext{
@@ -134,8 +148,8 @@
                 border: none;
                 border-radius: 9999px;
                 color: white;
-                padding: 2vh 2vw;
-                font-size: $fontMini
+                padding: 15px 25px;
+                font-size: $fontMini;
             }
 
         }
