--- a/scss/style.scss
+++ b/scss/style.scss
@@ -42,7 +42,7 @@ body {
     height: 100vh;
     min-height: 700px;
     max-height: 1200px;
-
+    max-width: 1000px;
     display: grid;
     grid-template-areas:
       "a a a a b b b b"
